--- a/frontend-practice-files/portfolio/index.html
+++ b/frontend-practice-files/portfolio/index.html
@@ -1,1 +1,55 @@
-<!-- index.html for portfolio -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Abhishek Pandey | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Abhishek Pandey</h1>
+    <nav>
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="intro">
+    <h2>Frontend Developer (in progress)</h2>
+    <p>Building projects using HTML, CSS, and JavaScript.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>Landing Page</h3>
+      <p>A clean landing page with modern UI.</p>
+    </div>
+    <div class="project">
+      <h3>Contact Form</h3>
+      <p>A responsive form with validation using JavaScript.</p>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: abhishek@example.com</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
