--- a/frontend-practice-files/landing-page/index.html
+++ b/frontend-practice-files/landing-page/index.html
@@ -1,1 +1,24 @@
-<!-- index.html for landing-page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Simple Landing Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="hero">
+    <h1>Welcome to My Page</h1>
+    <p>Clean. Simple. Responsive.</p>
+    <a href="#learn" class="btn">Learn More</a>
+  </div>
+
+  <section id="learn">
+    <h2>Why This Page?</h2>
+    <p>This landing page is built using HTML and CSS only. No frameworks.</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
